@@ -12,7 +12,9 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: canohost.c,v 1.48 2005/12/28 22:46:06 stevesk Exp $");
+RCSID("$OpenBSD: canohost.c,v 1.49 2006/02/22 00:04:44 stevesk Exp $");
+
+#include <ctype.h>
 
 #include "packet.h"
 #include "xmalloc.h"
