@@ -59,7 +59,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: clientloop.c,v 1.154 2006/02/20 17:19:54 stevesk Exp $");
+RCSID("$OpenBSD: clientloop.c,v 1.155 2006/02/22 00:04:44 stevesk Exp $");
 
 #include <sys/types.h>
 #ifdef HAVE_SYS_STAT_H
@@ -67,6 +67,7 @@ RCSID("$OpenBSD: clientloop.c,v 1.154 2006/02/20 17:19:54 stevesk Exp $");
 #endif
 #include <sys/ioctl.h>
 
+#include <ctype.h>
 #include <paths.h>
 #include <signal.h>
 #include <termios.h>
