@@ -1,4 +1,4 @@
-/*	$OpenBSD: includes.h,v 1.35 2006/02/20 17:02:44 stevesk Exp $	*/
+/*	$OpenBSD: includes.h,v 1.37 2006/02/22 00:04:44 stevesk Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -25,7 +25,6 @@ static /**/const char *const rcsid[] = { (const char *)rcsid, "\100(#)" msg }
 
 #include <stdarg.h>
 #include <stdio.h>
-#include <ctype.h>
 #include <errno.h>
 #include <fcntl.h> /* For O_NONBLOCK */
 #include <stdlib.h>
