@@ -12,10 +12,12 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: readconf.c,v 1.147 2006/02/20 17:19:54 stevesk Exp $");
+RCSID("$OpenBSD: readconf.c,v 1.148 2006/02/22 00:04:44 stevesk Exp $");
 
 #include <sys/types.h>
 #include <sys/stat.h>
+
+#include <ctype.h>
 
 #include "ssh.h"
 #include "xmalloc.h"
